fix: change name of library
the lib should not named like the project. this leads to errors during npm install.

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "angular-lib",
+    "name": "angular-lib-todo",
     "version": "0.0.1",
     "author": "Jessica Hempel <jessica.hempel92@gmail.com>",
     "license": "MIT",
